--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js --exec babel-node"
+    "start": "npm-run-all build server",
+    "build": "npm-run-all clean transplie",
+    "clean" :"rimraf dist-server",
+    "transplie": "babel server/index.js --out-dir dist-server",
+    "server": "nodemon dist-server/index.js",
+
+    "dev" : "nodemon server/index.js --exec babel-node"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +21,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongodb": "^3.6.3",
     "mongoose": "^5.11.18",
+    "monodb": "^1.4.2",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "npm-run-all": "^4.1.5",
+    "pug": "^3.0.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
